@@ -161,6 +161,7 @@ Chronological list of authors
   - Dimitrios Papageorgiou
   - Hannah Pollak
   - Estefania Barreto-Ojeda
+  - Paarth Thadani
 
 External code
 -------------
